--- a/_posts/2023-10-12-Security.md
+++ b/_posts/2023-10-12-Security.md
@@ -9,16 +9,14 @@ This lab is designed to introduce the fundamental concepts of QoS and 802.1X wit
 
 # Introduction
 
-In this lab, you will learn the basic concepts of QoS over Wifi and analyze the effect of properly configuring Qos on your wireless network. You will first make a phone call test without any QoS on a saturated channel, then we will implement QoS on the wireless controller and verify the impact it has. We will also setup a 802.1X SSID to help us implementing AAA override for QoS policies for better management. 
+In this lab, you will learn the basic concepts of QoS over Wifi and analyze the effect of properly configuring Qos on your wireless network. We will also setup a 802.1X SSID to help us implementing AAA override for QoS policies for better management. 
 
 Here is a brief summary of the steps involved in this lab :
 1. Step 1 : Ensure that you can make a phone call over wireless
-2. Step 2 : Increase the traffic load on a specific channel
-3. Step 3 : Implement QoS on the wired network 
-4. Step 4 : Implement QoS on the wireless network and notice the improvement
-5. Step 5 : Take an OTA to verify the QoS tags applied to the frames
-6. Step 6 : Create a 802.1X SSID with ISE
-7. Step 7 : Send QoS policies and VLAN using ISE
+3. Step 2 : Check the QoS on the wired network 
+5. Step 3 : Take an OTA to verify the QoS tags applied to the frames
+6. Step 4 : Create a 802.1X SSID with ISE
+7. Step 5 : Send QoS policies and VLAN using ISE
 
 ## Topology
 
@@ -29,16 +27,16 @@ As a reminder, here is the topology of your lab and how it should be configured 
 ![Topology]({{ site.baseurl }}/images/topology-full.png)
 
 Reminder of the port/pod mapping on the **VM switch** : 
-- Pod 1 : port 23
-- Pod 2 : port 24
-- Pod 3 : port 25
-- Pod 4 : port 26
-- Pod 5 : port 31
-- Pod 6 : port 32
-- Pod 7 : port 35
-- Pod 8 : port 36
-- Pod 9 : port 37
-- Pod 10 : port 38
+- Pod 1 : port 23, switch 25
+- Pod 2 : port 24, switch 35
+- Pod 3 : port 25, switch 36
+- Pod 4 : port 26, switch 45
+- Pod 5 : port 31, switch 46
+- Pod 6 : port 32, switch 55
+- Pod 7 : port 35, switch 56
+- Pod 8 : port 36, switch 65
+- Pod 9 : port 37, switch 66
+- Pod 10 : port 38, switch 75
 
 VLANs configured on your 3750 switch, with a DHCP pool : 
 - VLAN 2 (management VLAN) : 192.168.2.0/24
@@ -46,6 +44,13 @@ VLANs configured on your 3750 switch, with a DHCP pool :
 - VLAN 10 (APs VLAN) : 192.168.10.0/24
 - VLAN 30 (Wireless clients VLAN) : 192.168.30.0/24
 - VLAN 40 (Wireless clients VLAN) : 192.168.40.0/24
+
+Interface mapping on the switch : 
+- Interface 1 (AP) : TRUNK, native VLAN 10
+- Interface 2 (laptop) : ACCESS vlan 2
+- Interface 3 (Cubietruck) : ACCESS vlan 3
+- Interface 4 (Wired phone) : ACCESS vlan 3
+- Interface 5 (VM) : ACCESS vlan 2
 
 Make sure that you have an SVI for these VLANs, the VLAN configured and a working DHCP pool for all the VLANs. 
 
@@ -63,27 +68,7 @@ You can first connect a wired phone to your switch, place it in VLAN 30 or 40 (d
 
 After this, make sure that you can have a phone call between your mobile phone and the wired phone. If you cannot manage to do this, please call your instructor. 
 
-## Step 2 : Increase the traffic load on a specific channel
-
-The goal will be to set multiple access points on the same channel to force channel utilization and simulate a busy environment to degrade the phone calls quality.
-
-There are 10 pods that we will separate in 2 groups : 
-- Pod 1 → 5 will broadcast their SSID on **channel 36**
-- Pod 6 → 10 will broadcast their SSID on **channel 44**
-
-### Change the operating channel on the access point
-
-To change the channel currently being used, you can go to `Configuration > Wireless > Acces Point`, under the 5Ghz band, select the access point and under `RF Channel Assignment`, change the Assignment method to "Custom" and then select a channel of 20Mhz and select the channel assigned to your pod.
-
-You should see the effect of this by going to `Monitoring > Wireless > AP Statistics`, click on the AP and under the 360° view,  you should see the channel used for the 5Ghz band and also the current channel utilization.
-
-### Generate traffic to a wireless client
-
-Next step will be to send traffic to a connected wireless client. This will make the air "busier" and the channel utilization should go up. This simulates a busy network where a lot of clients are connected and generating data. 
-
-To do this, please follow instructions given by the teacher. 
-
-## Step 3 : Implement QoS on the wired network
+## Step 2 : Check QoS on the wired network
 
 The first thing we will do is to verify that the wired phone is sending the packets with a DSCP tags. The IP phone should be marking the traffic before sending it.
 
@@ -93,23 +78,17 @@ To verify this, you will need to make a packet capture on the switchport where t
 
 Once done, stop the capture and analyze it to verify that the DSCP tag is present.
 
-### Configure the switch to preserve the DSCP tag
+![DSCP]({{ site.baseurl }}/images/dscp.png)
 
-To be continued...
+## Step 3 : Take an OTA to verify the QoS tags applied to the frames
 
-## Step 4 : Implement QoS on the wireless network 
+By default, a platinum QoS policy is configured on the policy profile. Therefore, you should notice that the phone call has an already good quality, at least from the wired to the wireless.
 
-Now, it is time to improve the quality of the call over the wireless network. To do this, we will need to apply a change on the 9800 wireless controller. You will use a Platinum QoS on your WLAN.
+Unfortunately, the Android phones will not tag the traffic and therefore QoS will not be possible on the uptream wireless.
 
-On your 9800 controller, navigate to the policy profile being used for your open SSID and change the "QoS SSID Policy" setting under "QoS and AVC" tab of the policy profile. Set it to platinum. 
+The goal here is to confirm that the DSCP tag is preserved and that QoS is applied on the downstream direction (wireless). This can be verified using an OTA (Over The Air) capture.
 
-![Platinum]({{ site.baseurl }}/images/platinum-pp.png)
-
-Once applied, you can try to make a phone call again and notice if the phone quality improved. 
-
-## Step 5 : Take an OTA to verify the QoS tags applied to the frames
-
-The next step will be to observe the change that we made on the policy profile by taking an Over the Air (OTA) capture. The point will be to check in this packet capture if the UP (User Priority) can be observed on the frames. To do this, we will put one access point in sniffer mode, and another access point will be used to broadcast the SSID. 
+The next step will be to observe the QoS by taking an Over the Air (OTA) capture. The point will be to check in this packet capture if the UP (User Priority) can be observed on the frames. To do this, we will put one access point in sniffer mode, and another access point will be used to broadcast the SSID. 
 
 You will work by pair of 2 groups : one group will sniff the air, while the other will make the phone call and generate the traffic. 
 
@@ -141,13 +120,15 @@ Wait for group 2 to finish its work and then try to start the capture, make the 
 
 ### Group 2 : Configure the channel of the access point
 
-Please refer to the [**Change the operating channel on the access point**](#change-the-operating-channel-on-the-access-point) section above.
+To change the channel currently being used, you can go to `Configuration > Wireless > Acces Point`, under the 5Ghz band, select the access point and under `RF Channel Assignment`, change the Assignment method to "Custom" and then select a channel of 20Mhz and select the channel assigned to your pod.
+
+You should see the effect of this by going to `Monitoring > Wireless > AP Statistics`, click on the AP and under the 360° view,  you should see the channel used for the 5Ghz band and also the current channel utilization.
 
 You should see something similar to this on the frames sent to/from the wireless client making the phone call : 
 
 ![UP value]({{ site.baseurl }}/images/up-value.png)
 
-## Step 6 : Create a 802.1X SSID with ISE
+## Step 4 : Create a 802.1X SSID with ISE
 
 ![Topology with ISE]({{ site.baseurl }}/images/ise-topology.png)
 
@@ -255,7 +236,7 @@ Go to `Operations > RADIUS > Live Logs` and you see the list of authentication r
 
 Go to `Troubleshooting > Radioactive Trace > + Add` and specify the MAC/IP address of the client(s) you want to troubleshoot. Click "Start", reproduce the issue and then generate the RA trace for the last 10 minutes. This log will give you all the information needed to understand the root cause of the issue. You can reach out to your instructor if help is needed.
 
-## Step 7 : Send QoS policies and VLAN using ISE
+## Step 5 : Send QoS policies and VLAN using ISE
 
 The point here is to allow specific users to have a certain QoS policiy, while other users will have a different QoS policy applied. 
 
